// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package enforcer.v1;

// Specifies import path for the generated Go code used to auto-generate SDK code from proto annotations.
option go_package = "github.com/private-compute-infra-toolkit/ez/sdk/v1";

// TODO: Document how these state transitions are intended to work, and
// link the doc here.
enum IsolateState {
  ISOLATE_STATE_UNSPECIFIED = 0;
  // Enforcer has started the Isolate.
  ISOLATE_STATE_STARTING = 1;
  // Isolate has started but needs to update before serving.
  ISOLATE_STATE_WARMED = 3;
  // Isolate is in the process of updating config.
  // (Only PUBLIC and DOMAIN_OWNED scopes allowed)
  ISOLATE_STATE_UPDATING = 5;
  // Isolate is done updating and ready to accept generic traffic.
  ISOLATE_STATE_READY = 7;
  // Isolate is serving data in a restricted scope.
  // (Only scopes more restricted than DOMAIN_OWNED cause this)
  ISOLATE_STATE_SERVING = 9;
  // Isolate is done with pending requests, but is still in a restricted scope.
  ISOLATE_STATE_IDLE = 11;
  // Isolate is being gracefully shut down.
  // It will finish in-flight requests but not accept new ones.
  ISOLATE_STATE_RETIRING = 12;
}
